Added header and footer component and installed react-router-dom

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,9 +2,22 @@
 ----------------------- */
 // Colors
 $primary: #e50914;
+$secondary: #1B1920;
+$light: #ECECEC;
+
 // Fonts
 $font-family-base: 'Source Sans Pro',
 sans-serif;
 
 /* Custom variables
 ----------------------- */
+// Colors
+$white: #fff;
+$black: #000;
+
+// Breakpoint variable
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$huge: 1800px;
