--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -3,3 +3,6 @@
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
+
+// Global app styles
+@import './global';
