Created media-card, actor-card and video-player component

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,8 @@
 
     &__content {
         flex: 1 0 auto;
-        margin-top: 6.25rem;
+        margin-top: 8rem;
+        margin-bottom: 2.5rem;
     }
 
 
