--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -6,8 +6,8 @@ body {
 }
 
 body {
-    // background-color: $secondary;
-    // color: $light;
+    background-color: $secondary;
+    color: $light;
 }
 
 ::selection {
