--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -15,6 +15,9 @@
         margin: .5rem auto 0 auto;
         max-width: 60ch;
         text-align: center;
+        font-weight: 300;
+        font-size: .9rem;
+        letter-spacing: 1px;
     }
 
     &__link,
