--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -1,7 +1,6 @@
 @import '../../assets/sass/variables';
 
 .hero {
-    // height: 100vh;
     background-image: url(../../assets/images/background/hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -12,7 +11,7 @@
         height: 100%;
         width: 100%;
         background-color: rgba($secondary, .97);
-        padding: 70px 0;
+        padding: 4.3rem 0;
         border-bottom: 1px solid rgba($white, .05);
     }
 }
