--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -1,4 +1,5 @@
 @import '../../assets/sass/variables';
+@import '../../assets/sass/mixins';
 
 .hero {
     background-image: url(../../assets/images/background/hero.jpg);
@@ -11,7 +12,11 @@
         height: 100%;
         width: 100%;
         background-color: rgba($secondary, .97);
-        padding: 4.3rem 0;
         border-bottom: 1px solid rgba($white, .05);
+        padding: 3.5rem 0;
+
+        @include respond(large) {
+            padding: 4.3rem 0;
+        }
     }
 }
