--- a/src/components/media-description/media-description.styles.scss
+++ b/src/components/media-description/media-description.styles.scss
@@ -2,10 +2,10 @@
 @import '../../assets/sass/mixins';
 
 .media-description {
-    padding: 3.5rem 0;
+    padding-top: 3.5rem;
 
     @include respond(large) {
-        padding: 4.3rem 0;
+        padding-top: 4.3rem;
     }
 
     &__name {
