Implemented code-splitting with react-lazy and suspense and also styled not-found and error-boundary component

--- a/src/components/error-boundary/error-boundary.styles.scss
+++ b/src/components/error-boundary/error-boundary.styles.scss
@@ -1,6 +1,6 @@
 @import '../../assets/sass/mixins';
 
-.not-found {
+.error-boundary {
     height: 100%;
     width: 100%;
     display: flex;
@@ -14,7 +14,6 @@
         font-weight: 300;
         text-transform: capitalize;
 
-
         @include respond(medium) {
             font-size: 5rem;
             letter-spacing: 4px;
@@ -25,12 +24,10 @@
         font-size: 1rem;
         font-weight: 300;
         margin-top: .6rem;
-        margin-bottom: 1rem;
         letter-spacing: 1px;
 
         @include respond(medium) {
             font-size: 1.4rem;
-            margin-bottom: 1.5rem;
         }
     }
 }
