--- a/src/pages/credits/credits.styles.scss
+++ b/src/pages/credits/credits.styles.scss
@@ -5,10 +5,11 @@
     margin-top: 4.3rem;
 
     &__title {
-        font-size: 1.6rem;
-        font-weight: 400;
+        font-size: 1.8rem;
+        font-weight: 300;
         letter-spacing: 2px;
-        text-transform: capitalize;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
 
         @include respond(large) {
             font-size: 1.875rem;
@@ -17,9 +18,10 @@
 
     &__text {
         font-size: 1rem;
-        line-height: 1.8;
+        line-height: 1.6;
         font-weight: 300;
-        margin-top: 1rem;
+        margin: 0;
+        margin-top: 0.5rem;
         color: #c3c3c3;
 
         @include respond(large) {
